# launch_operation_GUI

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
cliant/: Cargo.toml  run.sh
cliant/src/: lib.rs
code_generator/: Cargo.toml
code_generator/src/: code_generation_context.rs  code_generation_main.rs  code_generator.rs  config_parser.rs  lib.rs  main.rs  template_parser.rs  var_type.rs
code_generator/tests/: config_for_code_generation.txt
config/template/rust/: template.txt  types.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  Button.tsx  Log.tsx  LogView.tsx  index.css
launch_operation_GUI/: Cargo.toml
launch_operation_GUI/src/: lib.rs  main.rs  serial_communication.rs
launch_operation_GUI/src/code_generation/: code_generation_main.rs  config_parser.rs
launch_operation_GUI/tests/: config_for_code_generation.txt
launch_operation_gui/: Cargo.toml
launch_operation_gui/src/: application.rs  command_parser.rs  integration_test.rs  lib.rs  main.rs  serial_communication.rs  server.rs  traits.rs
launch_operation_gui/src/presentation/: error.rs  handler.rs  router.rs  state.rs
src/: csv_writer.rs  gui.rs  integration_test.rs  lib.rs  main.rs  serial_communication.rs  service.rs  traits.rs
src/code_generation/: code_generation_context.rs  code_generation_main.rs  code_generator.rs  config_parser.rs  template_parser.rs  var_type.rs  コンフィグの書き方.md
src/gui/: gui.rs  text_view.rs  コンフィグの書き方.md
test_arduino/test_serial_echo/: Cargo.toml
tests/: config_for_code_generation.txt
(+12 files in other folders)
