[package]
name = "launch_operation_GUI"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.6.0"
iced = { version = "0.13.1", features = ["tokio"] }
log = "0.4.26"
env_logger = "0.11.6"
regex = "1.11.1"
minijinja = "2.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
