[package]
name = "launch_operation_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["tokio"] }
log = "0.4.26"
env_logger = "0.11.6"
rand = "0.9.0"
axum = { version = "0.8.4", features = [ "ws" ]}
tokio = { version = "1.47.1", features = [ "full" ] }
chrono = "0.4.42"
tokio-serial = "5.4.5"
async-trait = "0.1.89"
anyhow = "1.0.99"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
tower-http = { version = "0.6.6", features = [ "cors", "trace" ] }